force-app/main/default/objects/Cuidarnos_SMS_Send__c/Cuidarnos_SMS_Send__c.object-meta.xml
<CustomObject>
    <label>Cuidarnos SMS Send</label>
    <nameField>
        <displayFormat>CSMS-{000000}</displayFormat>
        <label>Cuidarnos SMS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cuidarnos SMS Sends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>