force-app/main/default/objects/Cuidarnos_SMS_Send__c/fields/Ciudadano__c.field-meta.xml
<CustomField>
    <fullName>Ciudadano__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ciudadano</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cuidarnos SMS Sends</relationshipLabel>
    <relationshipName>Cuidarnos_SMS_Sends</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>