force-app/main/default/objects/Cuidarnos_SMS_Send__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inicial</fullName>
            </value>
            <value>
                <fullName>En Progreso</fullName>
            </value>
            <value>
                <fullName>Exito</fullName>
            </value>
            <value>
                <fullName>Fallo</fullName>
            </value>
            <value>
                <fullName>Marcado y confirmado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>