force-app/main/default/objects/Cuidarnos_SMS_Send__c/fields/Total_Sends__c.field-meta.xml
<CustomField>
    <fullName>Total_Sends__c</fullName>
    <label>Cantidad Envios</label>
    <summaryForeignKey>Related_Contacts__c.Cuidarnos_SMS_Sends__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>