force-app/main/default/objects/Cuidarnos_SMS_Send__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cuidarnos_SMS_Sends</relationshipName>
    <type>Lookup</type>
</CustomField>