force-app/main/default/objects/Cuidarnos_SMS_Send__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ciudadano__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Sends__c</columns>
    <columns>Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Usuario__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>