force-app/main/default/objects/Cuidarnos_SMS_Send__c/listViews/Notificados.listView-meta.xml
<ListView>
    <fullName>Notificados</fullName>
    <columns>NAME</columns>
    <columns>Ciudadano__c</columns>
    <columns>IP__c</columns>
    <columns>Stack_Trace__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Usuario__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Notificación</value>
    </filters>
    <label>Notificados</label>
    <language>en_US</language>
</ListView>