force-app/main/default/objects/Cuidarnos_SMS_Send__c/listViews/Relacionados_Por_fecha.listView-meta.xml
<ListView>
    <fullName>Relacionados_Por_fecha</fullName>
    <columns>NAME</columns>
    <columns>Total_Sends__c</columns>
    <columns>Ciudadano__c</columns>
    <columns>Stack_Trace__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Usuario__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Relacionados</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Fallo</value>
    </filters>
    <label>Relacionados Por fecha</label>
</ListView>